# fastapi-login-boilerplate

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  pyproject.toml
app/database/: redis.py  sql.py
app/databases/: redis.py  sql.py
app/responses/: users.py
app/routers/: __init__.py  users.py
app/schemas/: user.py  users.py
app/static/: index.css  index.js  login.js  signup.js
app/templates/: index.html  login.html  logout.html  register.html
app/views/: view.py
tests/: test_app.py
