[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Isack Vitor <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
bcrypt = "^4.1.3"
email-validator = "^2.2.0"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"

[tool.taskipy.tasks]
run = "fastapi dev app/main.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
