[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Isack Vitor <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
bcrypt = "^4.1.3"
email-validator = "^2.2.0"
redis = "^5.0.7"
psycopg2-binary = "^2.9.9"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ['thread', 'greenlet']

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tools.ruff.format]
preview = true

[tool.taskipy.tasks]
pre_run = "docker compose up -d"
run = "uvicorn app.main:app --reload"
dev = "fastapi dev app/main.py"
test = "pytest --cov=app -vv"
post_test = "coverage html"
lint = "ruff check . && ruff . --diff"
format = "ruff check . --fix && ruff format ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
